--- a/style.css
+++ b/style.css
@@ -1028,7 +1028,7 @@ textarea {
 
 
 /* ============= Mobile View ===================== */
-@media(max-width: 576px) and (min-width: 373px) {
+@media(max-width: 576px) {
 
 
   #site-header .container .top-bar {
